# AI-Plat

./: .env.example  .gitignore  .skill_state.json  DIRECTORY_STRUCTURE.md  Makefile  README.md  auto_deploy.py  baidu_research_report.md  baidu_research_report_agent.md  docker-compose.yml  go.mod  go.sum  kill_ports.ps1  liushi-think.txt  start.bat  start.ps1  start.sh  tool-think.txt
agent/: .env.example  main.py  pyproject.toml
agent/app/api/: admin_routes.py  file_routes.py  knowledge_graph_routes.py  memory_routes.py  routes.py  skill_routes.py
agent/app/core/: config.py  database.py  providers.py  safety.py  session_manager.py
agent/app/graph/: __init__.py  checkpointer.py  edges.py  graph.py  state.py
agent/app/harness/: instructions.py  sandbox.py  scope.py  session.py  state.py  validator.py
agent/app/knowledge/: __init__.py  obsidian_importer.py  schemas.py  service.py
agent/app/llm/: __init__.py  client.py
agent/app/memory/: long_term.py  manager.py
agent/app/models/: __init__.py  conversation.py  knowledge_graph.py  message.py  user.py
agent/app/rag/: document.py  embedding.py  graphrag.py  retriever.py
agent/app/skill/: __init__.py  manager.py  models.py
agent/app/stream/: adapter.py
agent/app/tools/: __init__.py  base.py  (+7 more)
agent/skills/: .skill_state.json
agent/tests/: conftest.py  test_brave_search.py  test_concurrency.py  test_config.py  test_deepseek.py  test_graph.py  test_graphrag.py  test_harness.py  test_integration_providers.py  test_knowledge_graph_routes.py  test_obsidian_importer.py  test_performance.py  test_rag.py
(+485 files in other folders)
